--- a/boosting/boosting.csproj
+++ b/boosting/boosting.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Algorithms">
+      <HintPath>..\..\Documents\C# Bibliotek\Algorithms\bin\Debug\Algorithms.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADABoost.cs" />
+    <Compile Include="Case.cs" />
+    <Compile Include="DataStatistics.cs" />
+    <Compile Include="Hypothesis.cs" />
+    <Compile Include="ID3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
